--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "http": "0.0.0",
     "jsonwebtoken": "9.0.2",
     "lodash": "4.17.21",
-    "mongodb": "^6.6.1",
+    "mongodb": "6.12.0",
     "nodemailer": "6.9.13",
     "nodemon": "3.1.0",
     "swagger-jsdoc": "^6.2.8",
